# openai-apis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: .env.example  gunicorn.config.py  main.py
app/core/: config.py  lifespan.py
app/core/dependencies/: messages.py  requests.py
app/core/middlewares/: logging.py
app/core/prompts/: messages.py  quizzes.py
app/routes/: health_check.py  routers.py
app/routes/apis/: messages.py  quizzes.py
app/schemas/: messages.py  quizzes.py
app/services/dependencies/: messages.py
app/services/supabase/: messages.py
